added checkOrganization api and implementations
