# connector/rest/src/main/java/it/pagopa/selfcare/external_interceptor/connector/rest/model/prod_fd/OrganizationLightBeanResponse.java
@@ -1,0 +1,11 @@
+package it.pagopa.selfcare.external_interceptor.connector.rest.model.prod_fd;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+public class OrganizationLightBeanResponse {
+    private boolean alreadyRegistered;
+    private OrganizationResponse organization;
+}
